# pipeiq-framework

./: .gitignore  PRIME_INTELLECT_CLIENT_DOCS.md  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
examples/: phantom_example.py
examples/pipeiq_framework/prime_intellect_client/: example_usage.py
examples/prime_intellect_client/: example_usage.py
examples/solana_client/: solana_wallet_example.py
examples/worldcoin_client/: example.py  worldcoin.py  worldcoin_client.py
pipeiq/: __init__.py  attestation.py  client.py  hellomoon.py  hellomoon_mcp.py  logger.py  models.py  openrouter_mcp.py  persona.py  phantom.py  prime_intellect.py  solana.py  world_chain.py  world_coin.py
pipeiq-framework/solana_client/: solana_wallet.py
pipeiq_framework/persona_client/: persona_service.py
pipeiq_framework/phantom_client/: phantom_wallet.py
pipeiq_framework/phantom_client/examples/: phantom_example.py  test_phantom.py
pipeiq_framework/tests/persona_client/: persona_service.py  test_persona.py
pipeiq_framework/worldcoin_client/: worldcoin.py
tests/: test_attestation.py  test_client.py  test_hellomoon.py  test_hellomoon_mcp.py  test_openrouter_mcp.py  test_persona.py  test_phantom.py  test_prime_intellect.py  test_solana.py  test_world_chain.py
tests/persona_client/: test_persona.py
tests/pipeiq_framework/prime_intellect_client/: __init__.py  test_real_implementation.py
tests/prime_intellect_client/: test_real_implementation.py
tests/solana_client/: solana_wallet_test.py
