[tool.poetry]
name = "pipeiq-framework"
version = "0.1.0"
description = ""
authors = ["Shankar R <shankar@pipeiq.ai>"]
license = "MIT"
packages = [
    { include = "pipeiq-framework" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.12.13"
requests = ">=2.32.4"
solana = "^0.36.7"
base58 = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.0"
pytest-asyncio = ">=1.0.0"
